# pnu-challenge

./: .gitignore  README.md  main.py  pyproject.toml
image-task/: README.md  datasets_classification.py  detection.py  detection_testing.py  od_pipeline.py  pseudolabelling_with_stage_2_yolo.py  stage_1_2_yolo_od.py  stage_3_yolo_od.py  testing.py  train_eval_classification.py
image-task/coco-dataset/: coco_car_only_extractor.py
image-task/coco-dataset/coco_car_only/: data.yaml
image-task/indonesia-dataset/: cctv_frame_sampler.py  split_dataset.py
image-task/label_studio_data/: clean_car_type.csv
image-task/models/: cnn_model_classification.py  vit_model_classification.py
image-task/models/car_detection_stage_1_rtdetr-l/: args.yaml  results.csv
image-task/models/car_detection_stage_1_yolov10m/: args.yaml  results.csv
image-task/models/car_detection_stage_2_rtdetr-l/: args.yaml  results.csv
image-task/models/car_detection_stage_2_yolov10m/: args.yaml  results.csv
image-task/models/car_detection_stage_3_rtdetr-l/: args.yaml  results.csv
image-task/models/car_detection_stage_3_yolov10m/: args.yaml  results.csv
image-task/models/resnet50/: metrics_epoch_1.json  metrics_epoch_10.json  metrics_epoch_11.json  metrics_epoch_12.json  metrics_epoch_13.json  (+26 more)
llm-task/: README.md  api.py  benchmark_results_20260130_203854.json  rag_test_results_20260130_203407.json  test_benchmark.py  test_rag.py
llm-task/core/: embedder.py  generator.py  memory_store.py  retriever.py  safety.py
llm-task/pipelines/: download_datasets.py  ingest.py  prepare_data.py
(+31 files in other folders)
